# plasma-fold

./: Cargo.toml  README.md
.cargo/: config.toml
aggregator/: Cargo.toml
aggregator/src/: circuit.rs  errors.rs  lib.rs
client/: Cargo.toml  LICENSE_MIT  README.md
client/src/: lib.rs
client/src/circuits/: mod.rs
client/tests/: mod.rs  web.rs
mock-contract/: Cargo.toml
mock-contract/src/: lib.rs
plasma-fold/: Cargo.toml  README.md
plasma-fold/src/: errors.rs  lib.rs
plasma-fold/src/circuits/gadgets/: mod.rs
plasma-fold/src/datastructures/block/: constraints.rs  mod.rs
plasma-fold/src/datastructures/deposits/: mod.rs
plasma-fold/src/datastructures/keypair/: constraints.rs  mod.rs
plasma-fold/src/datastructures/noncemap/: constraints.rs  mod.rs
plasma-fold/src/datastructures/publickeymap/: mod.rs
plasma-fold/src/datastructures/signerlist/: constraints.rs  mod.rs
plasma-fold/src/datastructures/transaction/: constraints.rs  mod.rs
plasma-fold/src/datastructures/user/: constraints.rs  mod.rs
plasma-fold/src/datastructures/utxo/: constraints.rs  mod.rs
plasma-fold/src/datastructures/withdrawals/: mod.rs
plasma-fold/src/primitives/: mod.rs  schnorr.rs
plasma-fold/src/primitives/accumulator/: constraints.rs  mod.rs
plasma-fold/src/primitives/crh/: constraints.rs  mod.rs
plasma-fold/src/primitives/sparsemt/: constraints.rs  mod.rs
src/: circuits.rs  lib.rs  non_generic_circuits.rs
src/circuits/: asset_tree.rs  block.rs  deposit.rs  mod.rs  signature.rs  utxo_tree.rs
src/datastructures/: mod.rs
src/datastructures/deposits/: mod.rs
src/datastructures/keypair/: mod.rs
src/datastructures/noncemap/: mod.rs
src/datastructures/publickeymap/: mod.rs
src/datastructures/signerlist/: mod.rs
src/datastructures/transaction/: constraints.rs  crh.rs  mod.rs
src/datastructures/user/: mod.rs
src/datastructures/utxo/: constraints.rs  mod.rs
src/datastructures/withdrawals/: mod.rs
src/primitives/: crh.rs  schnorr.rs
src/primitives/crh/: mod.rs
src/tests/: mod.rs  utils.rs
tests/: deposit.rs  n_constraints.rs  plasma_fold.rs
