[workspace]
resolver = "2"
members = [ "aggregator","plasma-fold", "client"]

[workspace.dependencies]
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", rev = "fc91430" }
ark-ff = { version = "0.5.0" }
ark-bn254 = { version = "0.5.0" }
ark-grumpkin = { version = "0.5.0" }
ark-r1cs-std = { version = "0.5.0" }
ark-relations = { version = "0.5.0" }
ark-crypto-primitives = { version = "0.5.0" }
ark-std = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
num = "0.4.0"

[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/yelhousni/r1cs-std", rev = "440ca3" }
