[workspace]
resolver = "2"
members = [ "aggregator","plasma-fold", "client", "mock-contract" ]

[workspace.dependencies]
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", rev = "9b7dd34" }
ark-ff = { version = "^0.5.0"}
ark-bn254 = { version = "^0.5.0"}
ark-grumpkin = { version = "^0.5.0"}
ark-r1cs-std = { version = "^0.5.0" }
ark-relations = { version = "^0.5.0"}
ark-crypto-primitives = { version = "^0.5.0" }
ark-std = { version = "^0.5.0"}
ark-serialize = { version = "^0.5.0"}
ark-ec = { version = "^0.5.0" }
num = "0.4.0"
thiserror = "2.0.12"

[patch.crates-io]
ark-bn254 = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-grumpkin = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-ec = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-ff = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-serialize = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-r1cs-std = { git = "https://github.com/flyingnobita/r1cs-std_yelhousni", rev = "b4bab0c" }         # "perf/sw-updated" branch
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-crypto-primitives = { git = "https://github.com/flyingnobita/crypto-primitives", rev = "f559264" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "b3b4a15" }

[patch."https://github.com/arkworks-rs/algebra"]
ark-ec = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-ff = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
ark-serialize = { git = "https://github.com/dmpierre/algebra.git", branch = "fix/wasm32" }
