[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
plasma-fold = { path = "../plasma-fold/" }
ark-ff = { workspace = true }
ark-bn254 = { workspace = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
ark-grumpkin = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
