[package]
name = "plasma-fold"
version = "0.1.0"
edition = "2021"

[dependencies]
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe", rev = "fc91430" }
ark-r1cs-std = { version = "^0.5.0" }
ark-ff = { workspace = true }
ark-relations = { version = "^0.5.0", default-features = false }
ark-crypto-primitives = { version = "^0.5.0", features = ["r1cs", "crh", "sponge"] }
ark-bn254 = { workspace = true }
ark-grumpkin = { workspace = true }
ark-std = "0.5.0"
ark-serialize = "0.5.0"
ark-ec = "0.5.0"
num = "0.4.0"
